# HPRTOS

./: .gitignore  .gitmodules  README.md  stmUpload.sh
CubeMX/: .mxproject  CubeMX.ioc
CubeMX/Core/Inc/: stm32h7xx_hal_conf.h
CubeMX/Core/Src/: main.c  stm32h7xx_hal_msp.c
CubeMX/EWARM/: CubeMX.ewd  CubeMX.ewp  stm32h743xx_flash_rw_sram2.icf
apps/: CMakeLists.txt  vanguard-openocd.cfg
apps/FlightComputer/: CMakeLists.txt
apps/FlightComputer/FlightLib/: FlightConfig.h  FlightConstants.h  SensorData.h
apps/FlightComputer/SensorPackage/: CMakeLists.txt  Makefile  SensorPackage.cxx
apps/FlightComputer/SensorPackage/ADXL375/: ADXL375.cxx  ADXL375.h  ADXL375_registers.h
apps/FlightComputer/SensorPackage/ASM330/: ASM330.cxx  ASM330.h  ASM330_registers.h
apps/FlightComputer/SensorPackage/ICM42688/: ICM42688.cxx  ICM42688.h  ICM42688_registers.h
apps/FlightComputer/SensorPackage/LPS22/: LPS22.cxx  LPS22.h  LPS22_configs.h  LPS22_registers.h
apps/FlightComputer/SensorPackage/LPS25/: LPS25.h
apps/FlightComputer/SensorPackage/LSM303/: LSM303.cxx  LSM303.h  LSM303_configs.h  LSM303_registers.h
apps/FlightComputer/SensorPackage/Libs/TinyGPS/: TinyGPS++.cxx  TinyGPS++.h
apps/FlightComputer/SensorPackage/MAX10S/: MAX10S.cxx  MAX10S.h  u-blox_config_keys.h  u-blox_registers.h
apps/FlightComputer/SensorPackage/MS5611/: MS5611.cxx  MS5611.h  MS5611_registers.h
apps/FlightComputer/StateMachine/: CMakeLists.txt  Kconfig  StateMachine.cxx
apps/examples/gps/: gps_main.c
apps/nshlib/: CMakeLists.txt
nuttx/: .gitignore
nuttx/boards/arm/stm32h7/hprc-stm32h7/include/: board.h
nuttx/boards/arm/stm32h7/hprc-stm32h7/src/: CMakeLists.txt  hprc-stm32h7.h  stm32_bringup.c  stm32_userleds.c
nuttx/boards/arm/stm32h7/vanguard-fc/: Kconfig
nuttx/boards/arm/stm32h7/vanguard-fc/include/: board.h  board.h.old.h
nuttx/boards/arm/stm32h7/vanguard-fc/scripts/: Make.defs
nuttx/boards/arm/stm32h7/vanguard-fc/src/: CMakeLists.txt  stm32_adc.c  stm32_appinitialize.c  stm32_autoleds.c  stm32_boot.c  stm32_bringup.c  stm32_bringup.c.old.c  stm32_gpio.c  stm32_mmcsd.c  stm32_pwm.c  stm32_qencoder.c  stm32_sdmmc.c  stm32_spi.c  stm32_usb.c  stm32_usbmsc.c  stm32_userleds.c  (+1 more)
nuttx/include/net/: if.h
(+2 files in other folders)
